Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-1479

Compiled PHP process functions missing writeMessageEnd()

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.8
    • 0.9
    • PHP - Compiler
    • None
    • Patch Available

    Description

      While testing a PHP implementation of TJSONProtocol, we noticed that the process_* functions created by

      thrift -r --gen php:server

      were missing a call to

      $output->writeMessageEnd();

      This probably went unnoticed in testing to this point because TBinaryProtocol.php does not issue a message end marker. But with JSON, the message needs to be closed with a closing square bracket.

      The attached patch adds the message end call.

      Generated code has been tested with ThriftTest.thrift and TBinaryProtocol, as well as with our new JSON implementation.

      Attachments

        1. THRIFT-1479.patch
          0.6 kB
          Andrew Grumet

        Activity

          People

            aegrumet Andrew Grumet
            aegrumet Andrew Grumet
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: