THRIFT-1479. php: Compiled PHP process functions missing writeMessageEnd()

This patch adds in the missing call.

Patch: Andrew Grumet

git-svn-id: https://svn.apache.org/repos/asf/thrift/trunk@1226892 13f79535-47bb-0310-9956-ffa450edef68